SSHProcessRunner enhanced